[package]
name = "my_library"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true, optional = true }
rand_xorshift = { workspace = true, optional = true }
bevy = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = [ "html_reports" ]}

[[bench]]
name = "random"
harness = false

[features]
default = [ "pcg" ]
pcg = [ "rand_pcg" ]
xorshift = [ "rand_xorshift" ]
locking = []